<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="@string/rejestruj_konto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_email" />

    <!--W zadaniu egzaminacyjnym nie ma informacji o podpowiedziach, więc nie dajemy hint-->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_haslo" />

    <EditText
        android:id="@+id/haslo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powtorz_haslo" />

    <EditText
        android:id="@+id/haslo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <!--Przycisk w nowszych API wygląda inaczej niż na obrazie, nie należy się tym przejmować-->
    <Button
        android:id="@+id/zatwierdz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zatwierdz"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/komunikat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:layout_gravity="center"/>

</LinearLayout>